fix problems in styles due to the collapsable efect js

--- a/src/scss/layout/_share.scss
+++ b/src/scss/layout/_share.scss
@@ -147,7 +147,7 @@
   }
 }
 //due to the new div collapsable content
-.share-divs {
+.collapsable__content--share {
   display: flex;
   flex-direction: column;
   align-items: center;
